--- a/method_C/colocalisation_table.Rmd
+++ b/method_C/colocalisation_table.Rmd
@@ -162,10 +162,266 @@ filter(candw.df,symbol=="ST6GAL1") #
 
 keep.vec <- (na.omit(candw.df))$Locus.ID
 candw.df$coloc <- candw.df$Locus.ID %in% keep.vec
+keep.vec2 <- (na.omit(candu.df))$Locus.ID
+candu.df$coloc <- candu.df$Locus.ID %in% keep.vec2
 
 ggplot(data=candw.df,aes(x=coloc,y=coding)) + geom_boxplot()
 
 candw.df %>% group_by(.,coloc) %>% summarise(mean(coding))
 
 ```
+
+
+Append snpcount 
+
+
+```{r}
+
+candw.df$snpcount <- map(1:dim(candw.df)[1],function(i){
+  loc <- candw.df$Locus.ID[i]
+  dim(filter(cred.df,CondID==loc))[1]
+}) %>% as.integer(.)
+candu.df$snpcount <- map(1:dim(candu.df)[1],function(i){
+  loc <- candu.df$Locus.ID[i]
+  dim(filter(cred.df,CondID==loc))[1]
+}) %>% as.integer(.)
+```
+
+
+# Save tables
+
+```{r}
+
+library("gridExtra")
+
+edit_cell <- function(table, row, col, name="core-fg", ...){
+  #http://stackoverflow.com/questions/32173928/r-tablegrob-change-format-of-row
+  row <- row + 1 # my adjustment 
+  col <- col + 1 # my adjustment
+  l <- table$layout
+  ids <- which(l$t %in% row & l$l %in% col & l$name==name)
+  for (id in ids){
+  newgrob <- editGrob(table$grobs[id][[1]], ...)
+  table$grobs[id][[1]] <- newgrob
+  }
+  table
+}
+
+make_table_plot <- function(cand.df,limit=NULL){
+  cv <- brewer.pal(5,"Set3")
+  mycols <- c(cv[2],cv[1],"brown",cv[4],"grey")
+  plot.df <- filter(cand.df,coloc==TRUE) %>% arrange(.,desc(CLPP))
+  if (!is.null(limit)){
+    plot.df <- plot.df[1:limit,]
+  }
+  plot.df <- dplyr::select(plot.df,
+                           one_of("Locus.ID","snpcount","coding","islet","liver","adipose",
+                                  "muscle","other","assigned_20",
+                                  "symbol","eGene","CLPP"))
+  names(plot.df) <- c("Signal","Num.SNPs","coding","islet","liver","adipose","muscle",
+                           "other","assigned","Locus","eGene","CLPP")
+  plot.df$coding <- prettyNum(plot.df$coding,digits=2)
+  plot.df$islet <- prettyNum(plot.df$islet,digits=2)
+  plot.df$liver <- prettyNum(plot.df$liver,digits=2)
+  plot.df$muscle <- prettyNum(plot.df$muscle,digits=2)
+  plot.df$adipose <- prettyNum(plot.df$adipose,digits=2)
+  plot.df$other <- prettyNum(plot.df$other,digits=2)
+  plot.df$CLPP <- prettyNum(plot.df$CLPP,digits=3)
+  mytheme <- gridExtra::ttheme_default(
+    core = list(fg_params=list(cex = 0.7),
+    bg_params=list(fill="ghostwhite",alpha=0.3,
+                   col="black")),
+    colhead = list(fg_params=list(cex = 0.9),
+    bg_params=list(alpha=0.30,col="black")),
+    rowhead = list(fg_params=list(cex = 0))) 
+  
+  tabgrob <- tableGrob(plot.df,
+                      theme=mytheme) 
+  tabgrob <- edit_cell(tabgrob, row=1:dim(plot.df)[1], 
+                       col=10:11, "core-fg", 
+                 gp=gpar(fontface="italic"))  
+  tabgrob <- edit_cell(tabgrob,
+                    row=(1:dim(plot.df)[1])[plot.df$assigned=="adipose"],
+                    col=1:dim(plot.df)[2],
+                   "core-bg", gp=gpar(fill="#FFFFB3"))
+  tabgrob <- edit_cell(tabgrob,
+                    row=(1:dim(plot.df)[1])[plot.df$assigned=="liver"],
+                    col=1:dim(plot.df)[2],
+                   "core-bg", gp=gpar(fill="brown"))
+  tabgrob <- edit_cell(tabgrob,
+                    row=(1:dim(plot.df)[1])[plot.df$assigned=="islet"],
+                    col=1:dim(plot.df)[2],
+                   "core-bg", gp=gpar(fill="#8DD3C7"))
+  tabgrob <- edit_cell(tabgrob,
+                    row=(1:dim(plot.df)[1])[plot.df$assigned=="muscle"],
+                    col=1:dim(plot.df)[2],
+                   "core-bg", gp=gpar(fill="#FB8072"))
+  return(tabgrob)
+}
+
+```
+
+Weighted
+
+```{r}
+
+plot.dir <- work.dir %&% "plots/"
+
+grob1 <- make_table_plot(candw.df,20)
+ggsave(plot=grob1,filename=plot.dir %&%
+         "coloc-table_weighted_top20.png",height=10,width=20)
+grob1b <- make_table_plot(candw.df)
+ggsave(plot=grob1b,filename=plot.dir %&%
+         "coloc-table_weighted.png",height=30,width=20)
+```
+
+Unweighted 
+
+```{r}
+
+grob2 <- make_table_plot(candu.df,20)
+ggsave(plot=grob2,filename=plot.dir %&%
+         "coloc-table_unweighted_top20.png",height=10,width=20)
+grob2b <- make_table_plot(candu.df)
+ggsave(plot=grob2b,filename=plot.dir %&%
+         "coloc-table_unweighted.png",height=30,width=20)
+
+```
+
+
+# Coding genes-tissue tables 
+
+
+```{r}
+
+
+make_table_plot_coding <- function(cand.df,limit=NULL){
+  plot.df <- filter(cand.df) %>% arrange(.,desc(coding))
+  if (!is.null(limit)){
+    plot.df <- plot.df[1:limit,]
+  }
+  plot.df <- dplyr::select(plot.df,
+                           one_of("Locus.ID","snpcount","coding","islet","liver","adipose",
+                                  "muscle","other","assigned_20",
+                                  "symbol"))
+  names(plot.df) <- c("Signal","Num.SNPs","coding","islet","liver","adipose","muscle",
+                           "other","assigned","Locus")
+  plot.df$coding <- prettyNum(plot.df$coding,digits=2)
+  plot.df$islet <- prettyNum(plot.df$islet,digits=2)
+  plot.df$liver <- prettyNum(plot.df$liver,digits=2)
+  plot.df$muscle <- prettyNum(plot.df$muscle,digits=2)
+  plot.df$adipose <- prettyNum(plot.df$adipose,digits=2)
+  plot.df$other <- prettyNum(plot.df$other,digits=2)
+  mytheme <- gridExtra::ttheme_default(
+    core = list(fg_params=list(cex = 0.7),
+    bg_params=list(fill="ghostwhite",alpha=0.3,
+                   col="black")),
+    colhead = list(fg_params=list(cex = 0.9),
+    bg_params=list(alpha=0.30,col="black")),
+    rowhead = list(fg_params=list(cex = 0))) 
+  
+  tabgrob <- tableGrob(plot.df,
+                      theme=mytheme) 
+  tabgrob <- edit_cell(tabgrob, row=1:dim(plot.df)[1], 
+                       col=10, "core-fg", 
+                 gp=gpar(fontface="italic"))  
+  tabgrob <- edit_cell(tabgrob,
+                    row=(1:dim(plot.df)[1])[plot.df$assigned=="adipose"],
+                    col=1:dim(plot.df)[2],
+                   "core-bg", gp=gpar(fill="#FFFFB3"))
+  tabgrob <- edit_cell(tabgrob,
+                    row=(1:dim(plot.df)[1])[plot.df$assigned=="liver"],
+                    col=1:dim(plot.df)[2],
+                   "core-bg", gp=gpar(fill="brown"))
+  tabgrob <- edit_cell(tabgrob,
+                    row=(1:dim(plot.df)[1])[plot.df$assigned=="islet"],
+                    col=1:dim(plot.df)[2],
+                   "core-bg", gp=gpar(fill="#8DD3C7"))
+  tabgrob <- edit_cell(tabgrob,
+                    row=(1:dim(plot.df)[1])[plot.df$assigned=="muscle"],
+                    col=1:dim(plot.df)[2],
+                   "core-bg", gp=gpar(fill="#FB8072"))
+  return(tabgrob)
+}
+
+ 
+```
+
+
+Weigthed
+
+```{r}
+
+plot.dir <- work.dir %&% "plots/"
+
+grob2 <- make_table_plot_coding(candw.df,20)
+ggsave(plot=grob2,filename=plot.dir %&%
+         "coding-table_weighted_top20.png",height=10,width=20)
+grob2b <- make_table_plot_coding(candu.df,20)
+ggsave(plot=grob2b,filename=plot.dir %&%
+         "coding-table_unweighted_top20.png",height=10,width=20)
+```
+
+
+
+# Save gen cred bed file 
+
+
+```{r}
+
+cred.df$POS0 <- cred.df$POS - 1
+
+bed.df <- dplyr::select(cred.df,one_of("CHR","POS0","POS","CondID"))
+write.table(x=bed.df,write.dir %&% "gencred.bed",sep="\t",quote=F,
+            row.names=F,col.names=F)
+
+bdg.df <- dplyr::select(cred.df,
+                        one_of("CHR","POS0","POS","CondID","PPA",
+                               "SNPID")) %>% 
+  arrange(.,CondID,desc(PPA))
+
+dups <- bdg.df[duplicated(bdg.df$SNPID),]$SNPID %>% unique(.)
+
+bdg.df <- bdg.df[!duplicated(bdg.df$SNPID),]
+pb <- txtProgressBar(min=0,max=length(dups),style=3)
+for (i in 1:length(dups)){
+  setTxtProgressBar(pb,i)
+  dup <- dups[i]
+  max.val <- (filter(cred.df,SNPID==dup) %>% 
+                arrange(.,desc(PPA)))$PPA[1]
+  bdg.df[match(dup,bdg.df$SNPID),]$PPA <- max.val
+}
+
+bdg.df <- dplyr::select(bdg.df,one_of("CHR","POS0","POS","PPA"))
+
+write.table(x=bdg.df,write.dir %&% "gencred.bdg",sep="\t",quote=F,
+            row.names=F,col.names=F)
+
+```
+
+
+# additional checks
+ 
+ 
+```{r}
+
+
+s <- filter(coloc.df,Locus=="70_4",gene_name=="SETD9",Tissue=="Islet") %>% arrange(.,desc(CLPP))
+id <- "chr5:56238811"
+filter(cred.df,CondID=="70_4",SNPID==id)$PPA # PPA
+
+"chr5:56196604"
+"chr5:56206529"
+
+s2 <- filter(coloc.df,Locus=="70_4",gene_name=="SETD9") %>% arrange(.,desc(CLPP))
+View(s2)
+
+id2 <- "chr5:56205643"
+filter(cred.df,CondID=="70_4",SNPID==id2)$PPA
+
+#chr5:56196604
+
+s3 <- filter(coloc.df,Locus=="70_4",SNP_ID=="5_56196604")%>% arrange(.,desc(CLPP))
+
+``` 
 
